@@ -9,6 +9,6 @@ libshowdesktop_la_SOURCES = showdesktop.c
 libshowdesktop_la_LDFLAGS = -avoid-version
 
 icondir = $(datadir)/pixmaps
-icon_DATA = mb-applet-showdesktop.png mb-applet-showdesktop-active.png
+dist_icon_DATA = mb-applet-showdesktop.png mb-applet-showdesktop-active.png
 
 MAINTAINERCLEANFILES = Makefile.in
