@@ -8,6 +8,6 @@ libwindowselector_la_SOURCES = windowselector.c
 libwindowselector_la_LDFLAGS = -avoid-version
 
 icondir = $(datadir)/pixmaps
-icon_DATA = mb-applet-windowselector.png
+dist_icon_DATA = mb-applet-windowselector.png
 
 MAINTAINERCLEANFILES = Makefile.in
